--- a/Academy/Compliance/ISO27001.md
+++ b/Academy/Compliance/ISO27001.md
@@ -179,6 +179,27 @@ In the business context, it makes no sense to spend a fortune on reducing trivia
 
 ## Risk Treatment Options
 
+
+[ISO/IEC 27005:2022
+Information security, cybersecurity and privacy protection — Guidance on managing information security risks](https://www.iso.org/standard/80585.html) provides guidelines to managing _information security risks_ faced by organizations. The application of these guidelines can be applied to an Information Security Management System (ISMS) specified in ISO/IEC 27001 and ISO/IEC 27002.
+
+A technical committee named [ISO/IEC JTC 1/SC 27](https://www.iso.org/committee/45306.html) focus on the development of standards for the protection of information and ICT.
+
+
+The ISO 31000 Risk Management umbrella include some specifications still under development:
+ISO 31000:2018
+Risk management — Guidelines
+ * [ISO 31000 Risk management – Guidelines](https://www.iso.org/standard/65694.html)
+ * [ISO 31000:2019 Risk Management – Risk Assessment Techniques](https://www.iso.org/standard/72140.html)
+ * [ISO 31022:2020 Risk Management — Guidelines for the management of legal risk](https://www.iso.org/standard/69295.html)
+ * [ISO/FDIS 31030 Travel Risk Management — Guidance for organizations](https://www.iso.org/standard/54204.html)
+ * [ISO/AWI 31050 – Guidance for managing emerging risks to enhance resilience](https://www.iso.org/standard/54224.html)
+ * [ISO/DIS 31073 Risk Management – Vocabulary](https://www.iso.org/standard/79637.html)
+
+A technical committee named[ISO/TC 262](https://www.iso.org/committee/629121.html) focus on the development of standards in the field of risk management. Visit the Technical Committee's own [website](https://committee.iso.org/home/tc262) for more information.
+
+[ISO 31000](https://www.iso.org/iso-31000-risk-management.html) provides a common approach to managing _any type of risk_ faced by organizations. The application of these guidelines can be customized to any organization and its context.
+
 There are four generally accepted ways of treating risks:
 
 1. **Risk Avoidance** - Stopping or not starting particularly risky activities at all. This is seldom appropriate because we normally only do things that have some purpose and value, so if we don’t do them to avoid the associated risk, we lose that value. However, we do sometimes have the option of not taking on significant risks e.g. by consciously and deliberately not releasing sensitive, valuable information to untrustworthy third parties, or pulling out of business arrangements that have become unduly threatening to our interests.
@@ -191,18 +212,13 @@ There are four generally accepted ways of treating risks:
 
 ## Links Related to ISO 27001
 
-1. [ISO 27001 and Pentesting: What You Need to Know](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
 
-= [ISO/IEC 27000 - overview and glossary for the ISO27k](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27001 - formal information security management system specification](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27002 - a page explaining each of the 93 controls in ISO/IEC 27001 Annex A](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27003 - explains the formal requirements in ISO/IEC 27001 (2013 version – update in progress)](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27004 - how to design and use information security metrics](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/IEC 27005 - techniques to analyse/assess & treat information risks](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [Pragmatic ISMS implementation guide - explains ISO/IEC 27001 - free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO 31000 - risk management, in general](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO/TS 31050 - improving organisational resilience, extending ISO 31000](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [NIST Cyber Security Framework small business quick start guide - free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO27k Forum, ISO27k FAQ & ISO27k Toolkit - free, all free!](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
-- [ISO 27001 ISMS Handbook: Implementing and auditing an Information Security Management System in small and medium-sized businesses by Cees van der Wens (paperback ~US$40 from Amazon)](https://www.hackerone.com/security-compliance/iso-27001-pentesting)
+* [**ISO 27001 controls – A guide to implementing and auditing**, *Bridget Kenyon*, 2019](https://learning.oreilly.com/library/view/iso-27001-controls/9781787781467/)
+  * Bridget Kenyon has been involved in the development of the ISO 27001 standards for over a decade so you should probably listen
+  * This goes through every control from Annex A. and provides guidance and how to implement and audit them. Useful for building your ISMS, performing internal audits or kickstarting your career as a beloved ISO auditor!
+
+* [**IT Auditing Using Controls to Protect Information Assets**, *Mike Kegerreis, Mike Schiller and Chris Davis*, 2019](https://learning.oreilly.com/library/view/it-auditing-using/9781260453232/)
+  * IT Auditing stems from the increase of regulations that followed major financial scandals of the early 2000s. This is dominated by the Big Four audit firms for obvious reasons even though major corporations have internal staff dedicated to IT auditing
+  * This book is an encyclopedia that goes through how to audit everything from Data Centers to Networking Devices and from Web Applications to Windows Servers
+  * Written by industry experts with decades of experience, this will also be useful to GRC folks trying to understand some of the controls to verify with their teams armed with the underlying technical knowledge and know-how necessary
 
